--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,6 @@
-https://www.svgrepo.com/show/345221/three-dots.svg
+
+/* Your CSS Code here. */
+  .table, th, td {
+    border: 1px solid black;
+    border-collapse: collapse; 
+  }
